update init seeder, style ci config, and travis-ci config

--- a/.styleci.yml
+++ b/.styleci.yml
@@ -3,11 +3,8 @@ php:
   version: 9
   disabled:
     - no_unused_imports
+  enabled:
+    - align_double_arrow
   finder:
     not-name:
       - index.php
-js:
-  finder:
-    not-name:
-      - vite.config.ts
-css: true
