--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,8 @@ APP_URL=http://localhost
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
+SLACK_ERROR_WEBHOOK=
+ERROR_LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
@@ -50,3 +52,10 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+EMAIL_EXCEPTION_ENABLED=true
+EMAIL_EXCEPTION_FROM="${MAIL_FROM_ADDRESS}"
+EMAIL_EXCEPTION_TO='email1@gmail.com, email2@gmail.com'
+EMAIL_EXCEPTION_CC=''
+EMAIL_EXCEPTION_BCC=''
+EMAIL_EXCEPTION_SUBJECT=''
