--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "fruitcake/laravel-cors": "^3.0",
         "guzzlehttp/guzzle": "^7.2",
         "jeremykenedy/laravel-exception-notifier": "^3.1",
+        "jeremykenedy/laravel-roles": "^9.0",
         "laravel/framework": "^9.2",
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7"
