--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
         "@vue/tsconfig": "^0.1.3",
         "autoprefixer": "^10.4.8",
         "axios": "^0.27.2",
+        "chart.js": "^2.9.4",
+        "core-js": "^3.25.5",
         "eslint": "^8.23.0",
         "eslint-config-prettier": "^8.5.0",
         "eslint-plugin-html": "^7.1.0",
