--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
         "@fortawesome/free-solid-svg-icons": "^6.2.0",
         "@fortawesome/vue-fontawesome": "^3.0.1",
         "@headlessui/vue": "^1.6.7",
+        "@vueform/multiselect": "^2.5.6",
+        "lodash.clonedeep": "^4.5.0",
         "moment": "^2.29.4",
         "vform": "^2.1.2",
         "vue": "^3.2.38",
