--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
         "jeremykenedy/laravel-roles": "^9.0",
         "laravel/framework": "^9.2",
         "laravel/sanctum": "^3.0",
-        "laravel/tinker": "^2.7"
+        "laravel/tinker": "^2.7",
+        "qcod/laravel-settings": "^1.1"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
