Admin Portal with users, roles, and permissions tables

--- a/package.json
+++ b/package.json
@@ -1,74 +1,93 @@
 {
-    "private": true,
-    "scripts": {
-        "dev": "vite",
-        "build": "vite build",
-        "lint": "eslint --fix resources/js/ --ext .js,.vue",
-        "clean": "prettier .  --write"
-    },
-    "dependencies": {
-        "@fortawesome/fontawesome-free": "^6.2.0",
-        "@fortawesome/fontawesome-svg-core": "^6.2.0",
-        "@fortawesome/free-brands-svg-icons": "^6.2.0",
-        "@fortawesome/free-regular-svg-icons": "^6.2.0",
-        "@fortawesome/free-solid-svg-icons": "^6.2.0",
-        "@fortawesome/vue-fontawesome": "^3.0.1",
-        "@headlessui/vue": "^1.6.7",
-        "@vueform/multiselect": "^2.5.6",
-        "lodash.clonedeep": "^4.5.0",
-        "moment": "^2.29.4",
-        "vform": "^2.1.2",
-        "vue": "^3.2.38",
-        "vue-loader": "^17.0.0",
-        "vue-router": "^4.1.5",
-        "vuex": "^4.0.2",
-        "vuex-persistedstate": "^4.1.0",
-        "vuex-shared-mutations": "^1.0.2"
-    },
-    "devDependencies": {
-        "@heroicons/vue": "^2.0.10",
-        "@plugin-web-update-notification/vite": "^0.4.2",
-        "@popperjs/core": "^2.11.6",
-        "@rushstack/eslint-patch": "^1.1.4",
-        "@tailwindcss/aspect-ratio": "^0.4.1",
-        "@tailwindcss/forms": "^0.5.2",
-        "@tailwindcss/line-clamp": "^0.4.1",
-        "@tailwindcss/nesting": "^0.0.0-insiders.565cd3e",
-        "@tailwindcss/postcss7-compat": "^2.2.17",
-        "@tailwindcss/typography": "^0.5.6",
-        "@types/node": "^18.7.14",
-        "@vitejs/plugin-legacy": "^2.0.1",
-        "@vitejs/plugin-vue": "^3.0.3",
-        "@vue/compiler-sfc": "^3.2.38",
-        "@vue/eslint-config-prettier": "^7.0.0",
-        "@vue/eslint-config-typescript": "^11.0.0",
-        "@vue/tsconfig": "^0.1.3",
-        "autoprefixer": "^10.4.8",
-        "axios": "^0.27.2",
-        "chart.js": "^2.9.4",
-        "core-js": "^3.25.5",
-        "eslint": "^8.23.0",
-        "eslint-config-prettier": "^8.5.0",
-        "eslint-plugin-html": "^7.1.0",
-        "eslint-plugin-import": "^2.26.0",
-        "eslint-plugin-prettier": "^4.2.1",
-        "eslint-plugin-vue": "^9.4.0",
-        "laravel-mix": "^6.0.49",
-        "laravel-vite-plugin": "^0.6.0",
-        "lodash": "^4.17.21",
-        "postcss": "^8.4.16",
-        "postcss-nesting": "^10.1.10",
-        "prettier": "^2.7.1",
-        "prettier-plugin-tailwindcss": "^0.1.13",
-        "sass": "^1.54.8",
-        "sass-loader": "^13.0.2",
-        "tailwindcss": "^3.1.8",
-        "tw-elements": "^1.0.0-alpha12",
-        "typescript": "^4.8.2",
-        "vite": "^3.0.9",
-        "vite-plugin-eslint": "^1.8.1",
-        "vite-plugin-inspect": "^0.6.1",
-        "vite-plugin-stylelint": "^3.0.7",
-        "vue-sweetalert2": "^5.0.5"
-    }
+  "private": true,
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "lint": "eslint --fix resources/js/ --ext .js,.vue",
+    "clean": "prettier .  --write",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
+  },
+  "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.2.0",
+    "@fortawesome/fontawesome-svg-core": "^6.2.0",
+    "@fortawesome/free-brands-svg-icons": "^6.2.0",
+    "@fortawesome/free-regular-svg-icons": "^6.2.0",
+    "@fortawesome/free-solid-svg-icons": "^6.2.0",
+    "@fortawesome/vue-fontawesome": "^3.0.1",
+    "@headlessui/vue": "^1.6.7",
+    "@vueform/multiselect": "^2.5.6",
+    "lodash.clonedeep": "^4.5.0",
+    "moment": "^2.29.4",
+    "save-dev": "^0.0.1-security",
+    "vform": "^2.1.2",
+    "vue": "^3.2.38",
+    "vue-loader": "^17.0.0",
+    "vue-router": "^4.1.5",
+    "vuex": "^4.0.2",
+    "vuex-persistedstate": "^4.1.0",
+    "vuex-shared-mutations": "^1.0.2"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.19.6",
+    "@heroicons/vue": "^2.0.10",
+    "@plugin-web-update-notification/vite": "^0.4.2",
+    "@popperjs/core": "^2.11.6",
+    "@rushstack/eslint-patch": "^1.1.4",
+    "@storybook/addon-actions": "^6.5.13",
+    "@storybook/addon-essentials": "^6.5.13",
+    "@storybook/addon-interactions": "^6.5.13",
+    "@storybook/addon-knobs": "^6.4.0",
+    "@storybook/addon-links": "^6.5.13",
+    "@storybook/builder-vite": "^0.2.4",
+    "@storybook/testing-library": "^0.0.13",
+    "@storybook/vue3": "^6.5.13",
+    "@tailwindcss/aspect-ratio": "^0.4.1",
+    "@tailwindcss/forms": "^0.5.2",
+    "@tailwindcss/line-clamp": "^0.4.1",
+    "@tailwindcss/nesting": "^0.0.0-insiders.565cd3e",
+    "@tailwindcss/postcss7-compat": "^2.2.17",
+    "@tailwindcss/typography": "^0.5.6",
+    "@types/node": "^18.7.14",
+    "@vitejs/plugin-legacy": "^2.0.1",
+    "@vitejs/plugin-vue": "^3.0.3",
+    "@vue/compiler-sfc": "^3.2.38",
+    "@vue/eslint-config-prettier": "^7.0.0",
+    "@vue/eslint-config-typescript": "^11.0.0",
+    "@vue/tsconfig": "^0.1.3",
+    "autoprefixer": "^10.4.8",
+    "axios": "^0.27.2",
+    "babel-loader": "^8.2.5",
+    "chart.js": "^2.9.4",
+    "core-js": "^3.25.5",
+    "eslint": "^8.23.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-html": "^7.1.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-storybook": "^0.6.6",
+    "eslint-plugin-vue": "^9.4.0",
+    "html-webpack-plugin": "^5.5.0",
+    "laravel-mix": "^6.0.49",
+    "laravel-vite-plugin": "^0.6.0",
+    "lodash": "^4.17.21",
+    "postcss": "^8.4.16",
+    "postcss-nesting": "^10.1.10",
+    "prettier": "^2.7.1",
+    "prettier-plugin-tailwindcss": "^0.1.13",
+    "sass": "^1.54.8",
+    "sass-loader": "^13.0.2",
+    "stylelint": "^14.15.0",
+    "stylelint-webpack-plugin": "^3.3.0",
+    "tailwindcss": "^3.1.8",
+    "tw-elements": "^1.0.0-alpha12",
+    "typescript": "^4.8.2",
+    "v-tables-3": "^0.4.7",
+    "vite": "^3.0.9",
+    "vite-plugin-eslint": "^1.8.1",
+    "vite-plugin-inspect": "^0.6.1",
+    "vite-plugin-stylelint": "^3.0.8",
+    "vue-sweetalert2": "^5.0.5",
+    "vue-tippy": "^6.0.0-alpha.65"
+  }
 }
