--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
         "qcod/laravel-settings": "^1.1"
     },
     "require-dev": {
+        "barryvdh/laravel-debugbar": "^3.7",
         "fakerphp/faker": "^1.9.1",
         "laravel/pint": "^1.0",
         "laravel/sail": "^1.0.1",
