add google analytics to settings and throughout app in container and in router to track page views, used package to be able to add event tracking as fit as well

--- a/.env.example
+++ b/.env.example
@@ -59,3 +59,5 @@ EMAIL_EXCEPTION_TO='email1@gmail.com, email2@gmail.com'
 EMAIL_EXCEPTION_CC=''
 EMAIL_EXCEPTION_BCC=''
 EMAIL_EXCEPTION_SUBJECT=''
+
+GOOGLE_ANALYTICS_ID=''
