--- a/composer.json
+++ b/composer.json
@@ -41,12 +41,14 @@
         "socialiteproviders/constantcontact": "^4.2",
         "socialiteproviders/digitalocean": "^4.1",
         "socialiteproviders/discord": "^4.1",
+        "socialiteproviders/disqus": "^4.1",
         "socialiteproviders/dribbble": "^4.1",
         "socialiteproviders/dropbox": "^4.2",
         "socialiteproviders/envato": "^4.1",
         "socialiteproviders/etsy": "^5.0",
         "socialiteproviders/eveonline": "^4.2",
         "socialiteproviders/facebook": "^4.1",
+        "socialiteproviders/fitbit": "^4.1",
         "socialiteproviders/flickr": "^4.1",
         "socialiteproviders/foursquare": "^4.1",
         "socialiteproviders/fusionauth": "^5.0",
@@ -82,6 +84,7 @@
         "socialiteproviders/snapchat": "^4.1",
         "socialiteproviders/soundcloud": "^4.1",
         "socialiteproviders/spotify": "^4.1",
+        "socialiteproviders/stackexchange": "^4.1",
         "socialiteproviders/steam": "^4.2",
         "socialiteproviders/steem": "^4.1",
         "socialiteproviders/stripe": "^4.1",
@@ -97,7 +100,8 @@
         "socialiteproviders/wordpress": "^4.1",
         "socialiteproviders/yahoo": "^4.1",
         "socialiteproviders/youtube": "^4.1",
-        "socialiteproviders/zendesk": "^4.1"
+        "socialiteproviders/zendesk": "^4.1",
+        "socialiteproviders/zoom": "^4.0"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.7",
