--- a/.github/workflows/changelog.yml
+++ b/.github/workflows/changelog.yml
@@ -13,7 +13,7 @@ jobs:
       - uses: BobAnkh/auto-generate-changelog@v1.2.2
         with:
           REPO_NAME: 'jeremykenedy/laravel-spa'
-          ACCESS_TOKEN: ${{secrets.GH_TOKEN}}
+          ACCESS_TOKEN: ${{secrets.GITHUB_TOKEN}}
           PATH: 'CHANGELOG.md'
           COMMIT_MESSAGE: 'docs(CHANGELOG): update release notes'
           TYPE: 'feat:Feature,fix:Bug Fixes,docs:Documentation,refactor:Refactor,perf:Performance Improvements'
