--- a/.github/workflows/labeler.yml
+++ b/.github/workflows/labeler.yml
@@ -18,4 +18,4 @@ jobs:
     steps:
       - uses: actions/labeler@v4
         with:
-          repo-token: '${{ secrets.GH_TOKEN }}'
+          repo-token: '${{ secrets.GITHUB_TOKEN }}'
