add sentry.io monitoring and configurable settings in .env for seeder and admin gui for ease of use

--- a/.env.example
+++ b/.env.example
@@ -71,6 +71,11 @@ EMAIL_EXCEPTION_SUBJECT=''
 
 JWT_SECRET=
 
+SENTRY_IO_ENABLED=0
+SENTRY_IO_USER_FEEDBACK_ENABLED=0
+SENTRY_LARAVEL_DSN=
+SENTRY_TRACES_SAMPLE_RATE=1.0
+
 # These ALL below will all be seeded but can be changed through the super admin GUI.
 # If they have a value in the database for the field, that field will never seed again.
 # This is to protect and not override the users data.
