--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,7 @@
         "league/flysystem-aws-s3-v3": "^3.10",
         "nesbot/carbon": "^2.63",
         "qcod/laravel-settings": "^1.1",
+        "sentry/sentry-laravel": "^3.1",
         "socialiteproviders/37signals": "^4.1",
         "socialiteproviders/acclaim": "^4.1",
         "socialiteproviders/apple": "^5.3",
