--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@fortawesome/free-solid-svg-icons": "^6.2.0",
     "@fortawesome/vue-fontawesome": "^3.0.1",
     "@headlessui/vue": "^1.7.4",
+    "@sentry/tracing": "^7.23.0",
+    "@sentry/vue": "^7.23.0",
     "@vueform/multiselect": "^2.5.6",
     "lodash.clonedeep": "^4.5.0",
     "moment": "^2.29.4",
