add sentry.io to vite build process and add process.env access to vite.config

--- a/.env.example
+++ b/.env.example
@@ -59,6 +59,13 @@ VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
+VITE_SENTRY_ORG=''
+VITE_SENTRY_PROJECT=''
+VITE_SENTRY_AUTH_TOKEN=''
+VITE_SERVER_HTTPS_KEY='/Users/ENTERYOURSYSTEMPATH/.config/valet/Certificates/laravel-secret-messages.test.key'
+VITE_SERVER_HTTPS_CERT='/Users/ENTERYOURSYSTEMPATH/.config/valet/Certificates/laravel-secret-messages.test.crt'
+VITE_SERVER_HOST='YOUR-PROJECT-URL.test'
+
 WWWGROUP=1000
 WWWUSER=1000
 
