--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@plugin-web-update-notification/vite": "^0.4.2",
     "@popperjs/core": "^2.11.6",
     "@rushstack/eslint-patch": "^1.1.4",
+    "@sentry/vite-plugin": "^0.2.3",
     "@storybook/addon-actions": "^6.5.13",
     "@storybook/addon-essentials": "^6.5.13",
     "@storybook/addon-interactions": "^6.5.13",
