--- a/.github/workflows/changelog.yml
+++ b/.github/workflows/changelog.yml
@@ -17,3 +17,4 @@ jobs:
           PATH: 'CHANGELOG.md'
           COMMIT_MESSAGE: 'docs(CHANGELOG): update release notes'
           TYPE: 'feat:Feature,fix:Bug Fixes,docs:Documentation,refactor:Refactor,perf:Performance Improvements'
+          REGENERATE_COUNT: -1
