--- a/.github/workflows/changelog.yml
+++ b/.github/workflows/changelog.yml
@@ -18,3 +18,5 @@ jobs:
           COMMIT_MESSAGE: 'docs(CHANGELOG): update release notes'
           TYPE: 'feat:Feature,fix:Bug Fixes,docs:Documentation,refactor:Refactor,perf:Performance Improvements'
           REGENERATE_COUNT: -1
+          PULL_REQUEST: true
+          BRANCH: 'master'
