--- a/package.json
+++ b/package.json
@@ -4,9 +4,7 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint --fix resources/js/ --ext .js,.vue",
-    "clean": "prettier .  --write",
-    "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "clean": "prettier .  --write"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.2.0",
@@ -33,19 +31,12 @@
   },
   "devDependencies": {
     "@babel/core": "^7.19.6",
+    "@babel/eslint-parser": "^7.19.1",
     "@heroicons/vue": "^2.0.13",
     "@plugin-web-update-notification/vite": "^0.4.2",
     "@popperjs/core": "^2.11.6",
     "@rushstack/eslint-patch": "^1.1.4",
     "@sentry/vite-plugin": "^0.2.3",
-    "@storybook/addon-actions": "^6.5.13",
-    "@storybook/addon-essentials": "^6.5.13",
-    "@storybook/addon-interactions": "^6.5.13",
-    "@storybook/addon-knobs": "^6.4.0",
-    "@storybook/addon-links": "^6.5.13",
-    "@storybook/builder-vite": "^0.2.4",
-    "@storybook/testing-library": "^0.0.13",
-    "@storybook/vue3": "^6.5.13",
     "@tailwindcss/aspect-ratio": "^0.4.1",
     "@tailwindcss/forms": "^0.5.2",
     "@tailwindcss/line-clamp": "^0.4.1",
@@ -65,6 +56,7 @@
     "chart.js": "^2.9.4",
     "core-js": "^3.25.5",
     "eslint": "^8.23.0",
+    "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-html": "^7.1.0",
     "eslint-plugin-import": "^2.26.0",
