add more auth service providers

--- a/.env.example
+++ b/.env.example
@@ -103,6 +103,7 @@ SEED_USER_EMAIL='user@user.com'
 SEED_USER_PASSWORD='password'
 
 GOOGLE_ANALYTICS_ID=''
+GOOGLE_ANALYTICS_ENABLED=false
 
 # https://dev.twitch.tv/docs/authentication/
 TWITCH_ENABLED=false
@@ -165,9 +166,12 @@ MICROSOFT_REDIRECT_URI='https://YOURWEBURLHERE.COM/api/oauth/microsoft/callback'
 # https://developer.okta.com/blog/2019/06/04/what-the-heck-is-sign-in-with-apple
 # https://bannister.me/blog/generating-a-client-secret-for-sign-in-with-apple-on-each-request
 APPLE_ENABLED=false
-APPLE_KEY=''
-APPLE_SECRET=''
-APPLE_REDIRECT_URI='https://YOURWEBURLHERE.COM/api/oauth/apple/callback'
+APPLE_CLIENT_ID=''
+APPLE_CLIENT_SECRET=''
+APPLE_TEAM_ID=''
+APPLE_KEY_ID=''
+APPLE_PRIVATE_KEY=''
+APPLE_REDIRECT_URI='https://lYOURWEBURLHERE.COM/api/oauth/apple/callback'
 
 # https://socialiteproviders.com/LinkedIn/
 # https://www.linkedin.com/developers/apps/new
@@ -176,3 +180,26 @@ LINKEDIN_ENABLED=false
 LINKEDIN_CLIENT_ID=''
 LINKEDIN_CLIENT_SECRET=''
 LINKEDIN_REDIRECT_URI='https://YOURWEBURLHERE.COM/api/oauth/linkedin/callback'
+
+# https://www.zoho.com/accounts/protocol/oauth-setup.html
+# https://api-console.zoho.com/
+ZOHO_ENABLED=false
+ZOHO_CLIENT_ID=''
+ZOHO_CLIENT_SECRET=''
+ZOHO_REDIRECT_URI='https://YOURWEBURLHERE.COM/api/oauth/zoho/callback'
+
+# https://stackapps.com/apps/oauth/register
+STACKEXCHANGE_ENABLED=false
+STACKEXCHANGE_CLIENT_ID=''
+STACKEXCHANGE_CLIENT_KEY=''
+STACKEXCHANGE_CLIENT_SECRET=''
+STACKEXCHANGE_CLIENT_SITE='stackoverflow'
+STACKEXCHANGE_REDIRECT_URI='https://YOURWEBURLHERE.COM/api/oauth/stackexchange/callback'
+
+# https://gitlab.com/oauth/applications
+GITLAB_ENABLED=true
+GITLAB_CLIENT_ID=''
+GITLAB_CLIENT_SECRET=''
+GITLAB_REDIRECT_URI='https://YOURWEBURLHERE.COM/api/oauth/gitlab/callback'
+
+# NEW_PROVIDER_PLUG :: Put New Provider Here
