add more auth service providers

--- a/.env.example
+++ b/.env.example
@@ -197,9 +197,28 @@ STACKEXCHANGE_CLIENT_SITE='stackoverflow'
 STACKEXCHANGE_REDIRECT_URI='https://YOURWEBURLHERE.COM/api/oauth/stackexchange/callback'
 
 # https://gitlab.com/oauth/applications
-GITLAB_ENABLED=true
+GITLAB_ENABLED=false
 GITLAB_CLIENT_ID=''
 GITLAB_CLIENT_SECRET=''
 GITLAB_REDIRECT_URI='https://YOURWEBURLHERE.COM/api/oauth/gitlab/callback'
 
-# NEW_PROVIDER_PLUG :: Put New Provider Here
+# https://docs.google.com/a/reddit.com/forms/d/e/1FAIpQLSezNdDNK1-P8mspSbmtC2r86Ee9ZRbC66u929cG2GX0T9UMyw/viewform
+# https://www.reddit.com/prefs/apps
+REDDIT_ENABLED=false
+REDDIT_CLIENT_ID=''
+REDDIT_CLIENT_SECRET=''
+REDDIT_RESPONSE_TYPE='code'
+REDDIT_STATE='randomStringHere'
+REDDIT_REDIRECT_URI='https://YOURWEBURLHERE.COM/api/oauth/reddit/callback'
+
+# https://devportal.snap.com/manage/
+SNAPCHAT_ENABLED=false
+SNAPCHAT_CLIENT_ID=''
+SNAPCHAT_CLIENT_SECRET=''
+SNAPCHAT_REDIRECT_URI='https://YOURWEBURLHERE.COM/api/oauth/snapchat/callback'
+
+# https://www.meetup.com/api/oauth/list/
+MEETUP_ENABLED=false
+MEETUP_CLIENT_ID=''
+MEETUP_CLIENT_SECRET=''
+MEETUP_REDIRECT_URI='https://YOURWEBURLHERE.COM/api/oauth/meetup/callback'
