cleanup state callback, cleanup sentry status, add check for if provider is in use in settings

--- a/.env.example
+++ b/.env.example
@@ -45,6 +45,24 @@ AWS_DEFAULT_REGION=us-east-1
 AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
+WWWGROUP=1000
+WWWUSER=1000
+
+EMAIL_EXCEPTION_ENABLED=true
+EMAIL_EXCEPTION_FROM="${MAIL_FROM_ADDRESS}"
+EMAIL_EXCEPTION_TO='email1@gmail.com, email2@gmail.com'
+EMAIL_EXCEPTION_CC=''
+EMAIL_EXCEPTION_BCC=''
+EMAIL_EXCEPTION_SUBJECT=''
+
+JWT_SECRET=
+
+# The Sentry IO Settings get overwritten on save through the GUI
+SENTRY_IO_ENABLED=0
+SENTRY_IO_USER_FEEDBACK_ENABLED=0
+SENTRY_LARAVEL_DSN=
+SENTRY_TRACES_SAMPLE_RATE=1.0
+
 PUSHER_APP_ID=
 PUSHER_APP_KEY=
 PUSHER_APP_SECRET=
@@ -65,27 +83,12 @@ VITE_SENTRY_AUTH_TOKEN=''
 VITE_SERVER_HTTPS_KEY='/Users/ENTERYOURSYSTEMPATH/.config/valet/Certificates/laravel-secret-messages.test.key'
 VITE_SERVER_HTTPS_CERT='/Users/ENTERYOURSYSTEMPATH/.config/valet/Certificates/laravel-secret-messages.test.crt'
 VITE_SERVER_HOST='YOUR-PROJECT-URL.test'
-
-WWWGROUP=1000
-WWWUSER=1000
-
-EMAIL_EXCEPTION_ENABLED=true
-EMAIL_EXCEPTION_FROM="${MAIL_FROM_ADDRESS}"
-EMAIL_EXCEPTION_TO='email1@gmail.com, email2@gmail.com'
-EMAIL_EXCEPTION_CC=''
-EMAIL_EXCEPTION_BCC=''
-EMAIL_EXCEPTION_SUBJECT=''
-
-JWT_SECRET=
+VITE_SENTRY_IO_ENABLED="${SENTRY_IO_ENABLED}"
+VITE_APP_ENV="${APP_ENV}"
 
 # These ALL below will all be seeded but can be changed through the super admin GUI.
 # If they have a value in the database for the field, that field will never seed again.
 # This is to protect and not override the users data.
-
-SENTRY_IO_ENABLED=0
-SENTRY_IO_USER_FEEDBACK_ENABLED=0
-SENTRY_LARAVEL_DSN=
-SENTRY_TRACES_SAMPLE_RATE=1.0
 
 SEED_SUPER_ADMIN_USER_ENABLED=true
 SEED_SUPER_ADMIN_USER_NAME='Rick Sanchez'
