update twitter provider to work out the box since twitter uses oauth1, update stackechange provider since it doesnt return email, add ability to manage connected auth on per user basis.

--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,7 @@ APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
+#APP_URL='https://EXAMPLE.ngrok.io'
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
@@ -108,61 +109,64 @@ SEED_USER_PASSWORD='password'
 GOOGLE_ANALYTICS_ID=''
 GOOGLE_ANALYTICS_ENABLED=false
 
+REDIRECT_BASE_URL='https://YOURWEBURLHERE.COM'
+#REDIRECT_BASE_URL='${APP_URL}' # Can use this is its a qualified domain or ngrok domain
+
 # https://dev.twitch.tv/docs/authentication/
 TWITCH_ENABLED=false
 TWITCH_KEY=''
 TWITCH_SECRET=''
-TWITCH_REDIRECT_URI='https://YOURWEBURLHERE.COM/api/oauth/twitch/callback'
+TWITCH_REDIRECT_URI='${REDIRECT_BASE_URL}/api/oauth/twitch/callback'
 
 # https://github.com/settings/applications/new
 GITHUB_ENABLED=false
 GITHUB_KEY=''
 GITHUB_SECRET=''
-GITHUB_REDIRECT_URI='https://YOURWEBURLHERE.COM/api/oauth/github/callback'
+GITHUB_REDIRECT_URI='${REDIRECT_BASE_URL}/api/oauth/github/callback'
 
 # https://developers.tiktok.com/
 TIKTOK_ENABLED=false
 TIKTOK_KEY=''
 TIKTOK_SECRET=''
-TIKTOK_REDIRECT_URI='https://YOURWEBURLHERE.COM/api/oauth/tiktok/callback'
+TIKTOK_REDIRECT_URI='${REDIRECT_BASE_URL}/api/oauth/tiktok/callback'
 
 # https://developers.facebook.com/
 FACEBOOK_ENABLED=false
 FACEBOOK_KEY=''
 FACEBOOK_SECRET=''
-FACEBOOK_REDIRECT_URI='https://YOURWEBURLHERE.COM/api/oauth/facebook/callback'
+FACEBOOK_REDIRECT_URI='${REDIRECT_BASE_URL}/api/oauth/facebook/callback'
 
 # https://developers.facebook.com/
 GOOGLE_ENABLED=false
 GOOGLE_KEY=''
 GOOGLE_SECRET=''
-GOOGLE_REDIRECT_URI='https://YOURWEBURLHERE.COM/api/oauth/google/callback'
+GOOGLE_REDIRECT_URI='${REDIRECT_BASE_URL}/api/oauth/google/callback'
 
 # https://developers.google.com/youtube/v3/getting-started
 YOUTUBE_ENABLED=false
 YOUTUBE_KEY=''
 YOUTUBE_SECRET=''
-YOUTUBE_REDIRECT_URI='https://YOURWEBURLHERE.COM/api/oauth/google/callback'
+YOUTUBE_REDIRECT_URI='${REDIRECT_BASE_URL}/api/oauth/google/callback'
 
 # https://apps.twitter.com/
 TWITTER_ENABLED=false
 TWITTER_CLIENT_ID=''
 TWITTER_CLIENT_SECRET=''
-TWITTER_REDIRECT_URI='https://YOURWEBURLHERE.COM/api/oauth/twitter/callback'
+TWITTER_REDIRECT_URI='${REDIRECT_BASE_URL}/api/oauth/twitter/callback'
 
 # https://instagram.com/developer/register/
 # https://developers.facebook.com/apps
 INSTAGRAM_ENABLED=false
 INSTAGRAM_KEY=''
 INSTAGRAM_SECRET=''
-INSTAGRAM_REDIRECT_URI='https://YOURWEBURLHERE.COM/api/oauth/instagram/callback'
+INSTAGRAM_REDIRECT_URI='${REDIRECT_BASE_URL}/api/oauth/instagram/callback'
 
 #https://socialiteproviders.com/Microsoft/
 #https://portal.azure.com/
 MICROSOFT_ENABLED=false
 MICROSOFT_CLIENT_ID=''
 MICROSOFT_CLIENT_SECRET=''
-MICROSOFT_REDIRECT_URI='https://YOURWEBURLHERE.COM/api/oauth/microsoft/callback'
+MICROSOFT_REDIRECT_URI='${REDIRECT_BASE_URL}/api/oauth/microsoft/callback'
 
 # https://socialiteproviders.com/Apple/
 # https://github.com/SocialiteProviders/Apple#installation--basic-usage
@@ -182,14 +186,14 @@ APPLE_REDIRECT_URI='https://lYOURWEBURLHERE.COM/api/oauth/apple/callback'
 LINKEDIN_ENABLED=false
 LINKEDIN_CLIENT_ID=''
 LINKEDIN_CLIENT_SECRET=''
-LINKEDIN_REDIRECT_URI='https://YOURWEBURLHERE.COM/api/oauth/linkedin/callback'
+LINKEDIN_REDIRECT_URI='${REDIRECT_BASE_URL}/api/oauth/linkedin/callback'
 
 # https://www.zoho.com/accounts/protocol/oauth-setup.html
 # https://api-console.zoho.com/
 ZOHO_ENABLED=false
 ZOHO_CLIENT_ID=''
 ZOHO_CLIENT_SECRET=''
-ZOHO_REDIRECT_URI='https://YOURWEBURLHERE.COM/api/oauth/zoho/callback'
+ZOHO_REDIRECT_URI='${REDIRECT_BASE_URL}/api/oauth/zoho/callback'
 
 # https://stackapps.com/apps/oauth/register
 STACKEXCHANGE_ENABLED=false
@@ -197,13 +201,13 @@ STACKEXCHANGE_CLIENT_ID=''
 STACKEXCHANGE_CLIENT_KEY=''
 STACKEXCHANGE_CLIENT_SECRET=''
 STACKEXCHANGE_CLIENT_SITE='stackoverflow'
-STACKEXCHANGE_REDIRECT_URI='https://YOURWEBURLHERE.COM/api/oauth/stackexchange/callback'
+STACKEXCHANGE_REDIRECT_URI='${REDIRECT_BASE_URL}/api/oauth/stackexchange/callback'
 
 # https://gitlab.com/oauth/applications
 GITLAB_ENABLED=false
 GITLAB_CLIENT_ID=''
 GITLAB_CLIENT_SECRET=''
-GITLAB_REDIRECT_URI='https://YOURWEBURLHERE.COM/api/oauth/gitlab/callback'
+GITLAB_REDIRECT_URI='${REDIRECT_BASE_URL}/api/oauth/gitlab/callback'
 
 # https://docs.google.com/a/reddit.com/forms/d/e/1FAIpQLSezNdDNK1-P8mspSbmtC2r86Ee9ZRbC66u929cG2GX0T9UMyw/viewform
 # https://www.reddit.com/prefs/apps
@@ -212,16 +216,22 @@ REDDIT_CLIENT_ID=''
 REDDIT_CLIENT_SECRET=''
 REDDIT_RESPONSE_TYPE='code'
 REDDIT_STATE='randomStringHere'
-REDDIT_REDIRECT_URI='https://YOURWEBURLHERE.COM/api/oauth/reddit/callback'
+REDDIT_REDIRECT_URI='${REDIRECT_BASE_URL}/api/oauth/reddit/callback'
 
 # https://devportal.snap.com/manage/
 SNAPCHAT_ENABLED=false
 SNAPCHAT_CLIENT_ID=''
 SNAPCHAT_CLIENT_SECRET=''
-SNAPCHAT_REDIRECT_URI='https://YOURWEBURLHERE.COM/api/oauth/snapchat/callback'
+SNAPCHAT_REDIRECT_URI='${REDIRECT_BASE_URL}/api/oauth/snapchat/callback'
 
 # https://www.meetup.com/api/oauth/list/
 MEETUP_ENABLED=false
 MEETUP_CLIENT_ID=''
 MEETUP_CLIENT_SECRET=''
-MEETUP_REDIRECT_URI='https://YOURWEBURLHERE.COM/api/oauth/meetup/callback'
+MEETUP_REDIRECT_URI='${REDIRECT_BASE_URL}/api/oauth/meetup/callback'
+
+# https://developer.atlassian.com/console/myapps/
+BITBUCKET_ENABLED=false
+BITBUCKET_CLIENT_ID=''
+BITBUCKET_CLIENT_SECRET=''
+BITBUCKET_REDIRECT_URI='${REDIRECT_BASE_URL}/api/oauth/bitbucket/callback'
