update instgram provider, snapchat, and reddit providers

--- a/.env.example
+++ b/.env.example
@@ -136,7 +136,7 @@ FACEBOOK_KEY=''
 FACEBOOK_SECRET=''
 FACEBOOK_REDIRECT_URI='${REDIRECT_BASE_URL}/api/oauth/facebook/callback'
 
-# https://developers.facebook.com/
+# https://console.cloud.google.com/apis
 GOOGLE_ENABLED=false
 GOOGLE_KEY=''
 GOOGLE_SECRET=''
@@ -157,9 +157,9 @@ TWITTER_REDIRECT_URI='${REDIRECT_BASE_URL}/api/oauth/twitter/callback'
 # https://instagram.com/developer/register/
 # https://developers.facebook.com/apps
 INSTAGRAM_ENABLED=false
-INSTAGRAM_KEY=''
-INSTAGRAM_SECRET=''
-INSTAGRAM_REDIRECT_URI='${REDIRECT_BASE_URL}/api/oauth/instagram/callback'
+INSTAGRAMBASIC_CLIENT_ID=''
+INSTAGRAMBASIC_CLIENT_SECRET=''
+INSTAGRAMBASIC_REDIRECT_URI='${REDIRECT_BASE_URL}/api/oauth/instagram/callback'
 
 #https://socialiteproviders.com/Microsoft/
 #https://portal.azure.com/
@@ -231,7 +231,7 @@ MEETUP_CLIENT_SECRET=''
 MEETUP_REDIRECT_URI='${REDIRECT_BASE_URL}/api/oauth/meetup/callback'
 
 # https://developer.atlassian.com/console/myapps/
-BITBUCKET_ENABLED=false
-BITBUCKET_CLIENT_ID=''
-BITBUCKET_CLIENT_SECRET=''
-BITBUCKET_REDIRECT_URI='${REDIRECT_BASE_URL}/api/oauth/bitbucket/callback'
+ATLASSIAN_ENABLED=false
+ATLASSIAN_CLIENT_ID=''
+ATLASSIAN_CLIENT_SECRET=''
+ATLASSIAN_REDIRECT_URI='${REDIRECT_BASE_URL}/api/oauth/atlassian/callback'
