--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,4 +24,7 @@ jobs:
           username: ${{ secrets.USERNAME }}
           port: ${{ secrets.PORT }}
           key: ${{ secrets.SSHKEY }}
-          script: 'cd /var/www/html && ./.scripts/deploy.sh'
+          script: 'cd '${{ secrets.SPAPATH }}' && ./.scripts/deploy.sh'
+
+
+
