--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,4 +21,4 @@ jobs:
           username: ${{ secrets.USERNAME }}
           port: ${{ secrets.PORT }}
           key: ${{ secrets.SSHKEY }}
-          script: cd ${{ secrets.SPAPATH }} && ./.scripts/deploy.sh
+          script: "cd /usr/share/nginx/laravel-spa && ./.scripts/deploy.sh"
