--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,4 +21,6 @@ jobs:
           username: ${{ secrets.USERNAME }}
           port: ${{ secrets.PORT }}
           key: ${{ secrets.SSHKEY }}
-          script: 'cd /usr/share/nginx/laravel-spa && bash .scripts/deploy.sh'
+          script: 'cd {{ secrets.SPAPATH }} && bash .scripts/deploy.sh'
+
+
