update deployment script

--- a/.env.example
+++ b/.env.example
@@ -87,6 +87,9 @@ VITE_SERVER_HOST='YOUR-PROJECT-URL.test'
 VITE_SENTRY_IO_ENABLED="${SENTRY_IO_ENABLED}"
 VITE_APP_ENV="${APP_ENV}"
 
+VITE_SERVER_ENABLED=true
+VITE_SERVER_SECURE=false
+
 # These ALL below will all be seeded but can be changed through the super admin GUI.
 # If they have a value in the database for the field, that field will never seed again.
 # This is to protect and not override the users data.
