add additional app meta settings such as app name, author, and desc

--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,10 @@ APP_DEBUG=true
 APP_URL=http://localhost
 #APP_URL='https://EXAMPLE.ngrok.io'
 
+APP_AUTHOR='Jeremy Edgar Kenedy'
+APP_DESC='A Laravel 9 + Socialite + Vite + Vue 3 + Tailwind CSS SPA Boilerplate with user authentication, registration, email verification, social media authentication, password recovery, user management, and roles/permissions management. Uses TailwindCSS. While the front end is part of this repository it is a completely separated Vue 3 front end.'
+APP_KEYWORDS='framework,laravel,vite,vue3,spa,tailwindcss,auth,authentication,socialite,oauth2'
+
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
