add sitemap generator and PWA generator

--- a/.env.example
+++ b/.env.example
@@ -90,6 +90,7 @@ VITE_SERVER_HTTPS_CERT='/Users/ENTERYOURSYSTEMPATH/.config/valet/Certificates/la
 VITE_SERVER_HOST='YOUR-PROJECT-URL.test'
 VITE_SENTRY_IO_ENABLED="${SENTRY_IO_ENABLED}"
 VITE_APP_ENV="${APP_ENV}"
+VITE_APP_NAME="${APP_NAME}"
 
 VITE_SERVER_ENABLED=true
 VITE_SERVER_SECURE=false
