--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,10 @@
     "baseUrl": ".",
     "paths": {
       "@/*": ["./resources/js/*"]
-    }
+    },
+    "types": [
+      "vite-plugin-pwa/client"
+    ]
   },
 
   "references": [
