--- a/package.json
+++ b/package.json
@@ -84,6 +84,9 @@
     "vite": "^4.0.2",
     "vite-plugin-eslint": "^1.8.1",
     "vite-plugin-inspect": "^0.7.10",
+    "vite-plugin-pages": "^0.28.0",
+    "vite-plugin-pages-sitemap": "^1.4.5",
+    "vite-plugin-pwa": "^0.14.0",
     "vite-plugin-stylelint": "^4.1.4",
     "vue-content-loader": "^2.0.1",
     "vue-gtag-next": "^1.14.0",
