--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "vform": "^2.1.2",
     "vue": "^3.2.38",
     "vue-axios": "^3.5.2",
+    "vue-html-secure": "^1.0.10",
     "vue-loader": "^17.0.0",
     "vue-router": "^4.1.5",
     "vuex": "^4.0.2",
