update deploy workflow

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,19 +1,19 @@
 name: Deploy
 
 # Trigger the workflow on push and
-# pull request events on the production branch
+# pull request events on the released branch
 on:
   push:
     branches:
-      - production
+      - released
   pull_request:
     types: [approved]
     branches:
-      - production
+      - released
   pull_request_review:
     types: [submitted]
     branches:
-      - production
+      - released
 
 jobs:
   approved:
