add logger backend, https force, and update deployment script

--- a/.env.example
+++ b/.env.example
@@ -62,6 +62,10 @@ EMAIL_EXCEPTION_SUBJECT=''
 
 JWT_SECRET=
 
+LARAVEL_HTTP_ERROR_CODE=403
+LARAVEL_LOGGER_ROLES_MIDDLWARE=role:super.admin
+LARAVEL_LOGGER_DISABLE_ROUTES=true
+
 # The Sentry IO Settings get overwritten on save through the GUI
 SENTRY_IO_ENABLED=0
 SENTRY_IO_USER_FEEDBACK_ENABLED=0
