--- a/composer.json
+++ b/composer.json
@@ -16,13 +16,19 @@
         "fideloper/proxy": "^4.4",
         "fruitcake/laravel-cors": "^3.0",
         "guzzlehttp/guzzle": "^7.5",
+        "jaybizzle/crawler-detect": "^1.2",
+        "jaybizzle/laravel-crawler-detect": "^1.3",
+        "jeremykenedy/laravel-blocker": "^3.4",
         "jeremykenedy/laravel-exception-notifier": "^3.1",
+        "jeremykenedy/laravel-https": "^1.5",
+        "jeremykenedy/laravel-logger": "^6.0",
         "jeremykenedy/laravel-roles": "^9.0",
         "laravel/framework": "^9.2",
         "laravel/sanctum": "^3.0",
         "laravel/socialite": "^5.5",
         "laravel/tinker": "^2.7",
         "laravel/ui": "^4.1",
+        "laravelcollective/html": "^6.3",
         "lcobucci/jwt": "^4.2",
         "league/flysystem-aws-s3-v3": "^3.10",
         "mtownsend/laravel-make-trait": "^1.4",
